--- a/message.css
+++ b/message.css
@@ -1,8 +1,26 @@
-.message-blue {
+.message-others {
+    position: relative;
+    margin-left: calc(100% - 240px);
+    margin-right: 20px;
+    margin-bottom: 10px;
+    background-color: #A8DDFD;
+    min-width: 200px;
+    max-width: 75%;
+    width: auto;
+    height: auto;
+    text-align: left;
+    font: 400 .9em 'Open Sans', sans-serif;
+    border: 1px solid #97C6E3;
+    border-radius: 10px;
+    display: flexbox;
+}
+
+.message-my {
     position: relative;
     margin-left: 20px;
-    margin-bottom: 5px;
-    background-color: #A8DDFD;
+    margin-right: calc(100% - 240px);
+    margin-bottom: 10px;
+    background-color: cornflowerblue;
     min-width: 200px;
     max-width: 75%;
     width: auto;
@@ -24,7 +42,7 @@
     right: 5px;
 }
 
-.message-blue:after {
+.message-others:after {
     content: '';
     position: absolute;
     width: 0;
@@ -33,10 +51,34 @@
     border-left: 15px solid transparent;
     border-right: 15px solid transparent;
     top: 0;
+    right: -15px;
+}
+
+.message-others:before {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-top: 17px solid #97C6E3;
+    border-left: 16px solid transparent;
+    border-right: 16px solid transparent;
+    top: -1px;
+    right: -17px;
+}
+
+.message-my:after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-top: 15px solid cornflowerblue;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    top: 0;
     left: -15px;
 }
 
-.message-blue:before {
+.message-my:before {
     content: '';
     position: absolute;
     width: 0;
@@ -49,7 +91,7 @@
 }
 
 .username {
-    color: blue;
+    color: blueviolet;
     margin-left: 10px;
     margin-top: 5px;
     margin-left: 10px;
